# FastAPI-Login-Register-CRUD-using-JWTAuth

./: .env  .env.save  README.md  alembic.ini  nohup.out  pyproject.toml  requirements.txt
Python-3.10.0/: Makefile  Makefile.pre  config.status  pyconfig.h
Python-3.10.0/Modules/: _abc.gcda  _codecsmodule.gcda  _collectionsmodule.gcda  _functoolsmodule.gcda  _iomodule.gcda  _localemodule.gcda  _math.gcda  _operator.gcda  _sre.gcda  _stat.gcda  _threadmodule.gcda  _tracemalloc.gcda  _weakref.gcda  atexitmodule.gcda  bufferedio.gcda  bytesio.gcda  errnomodule.gcda  faulthandler.gcda  fileio.gcda  gcmodule.gcda  getbuildinfo.gcda  getpath.gcda  iobase.gcda  itertoolsmodule.gcda  ld_so_aix  main.gcda  posixmodule.gcda  pwdmodule.gcda  signalmodule.gcda  stringio.gcda  symtablemodule.gcda  textio.gcda  timemodule.gcda  xxsubtype.gcda
Python-3.10.0/Objects/: abstract.gcda  accu.gcda  boolobject.gcda  bytearrayobject.gcda  bytes_methods.gcda  bytesobject.gcda  call.gcda  capsule.gcda  cellobject.gcda  classobject.gcda  codeobject.gcda  complexobject.gcda  descrobject.gcda  dictobject.gcda  enumobject.gcda  exceptions.gcda  fileobject.gcda  floatobject.gcda  frameobject.gcda  funcobject.gcda  genericaliasobject.gcda  genobject.gcda  interpreteridobject.gcda  iterobject.gcda  listobject.gcda  longobject.gcda  memoryobject.gcda  methodobject.gcda  moduleobject.gcda  namespaceobject.gcda  object.gcda  obmalloc.gcda  odictobject.gcda  picklebufobject.gcda  rangeobject.gcda  (+9 more)
app/: .main.py.swp  config.py  config2.py  main.py  schema.py  schema.py.save
migrations/: env.py
(+27 files in other folders)
