[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["aliviarahma <l200190263@student.ums.ac.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
fastapi = {extras = ["uvicorn"], version = "^0.94.1"}
#sqlalchemy = "^2.0.6"
SQLAlchemy = "^1.4.41"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"
alembic = "^1.10.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start= "app.main:start"